p2/force-app/main/default/objects/Question__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <label>Answer 1</label>
    <type>TextArea</type>
</CustomField>