p2/force-app/main/default/objects/Question__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <label>Answer 2</label>
    <type>TextArea</type>
</CustomField>