p2/force-app/main/default/objects/Question__c/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <label>Answer 3</label>
    <type>TextArea</type>
</CustomField>